# $NetBSD: CHANGES-6.1.6,v 1.1.2.58 2016/04/15 19:37:47 snj Exp $

A complete list of changes from the NetBSD 6.1.5 release to the NetBSD 6.1.6
release:

doc/LAST_MINUTE					patched by hand
doc/README.files				patched by hand
gnu/usr.bin/groff/tmac/mdoc.local		patched by hand
sys/sys/param.h					patched by hand

	Welcome to 6.1.5_PATCH.
	[snj]

sys/compat/freebsd/freebsd_sysctl.c		1.17

	Do not access a userland pointer from kernel space directly, use
	copyin() instead, avoiding a crash.
	[maxv, ticket #1168]

crypto/external/bsd/openssl/dist/CHANGES	patch
crypto/external/bsd/openssl/dist/Configure	patch
crypto/external/bsd/openssl/dist/Makefile	patch
crypto/external/bsd/openssl/dist/NEWS		patch
crypto/external/bsd/openssl/dist/README		patch
crypto/external/bsd/openssl/dist/e_os.h		patch
crypto/external/bsd/openssl/dist/makevms.com	patch
crypto/external/bsd/openssl/dist/openssl.spec	patch
crypto/external/bsd/openssl/dist/apps/makeapps.com patch
crypto/external/bsd/openssl/dist/apps/s_client.c patch
crypto/external/bsd/openssl/dist/crypto/LPdir_vms.c patch
crypto/external/bsd/openssl/dist/crypto/LPdir_win.c patch
crypto/external/bsd/openssl/dist/crypto/Makefile patch
crypto/external/bsd/openssl/dist/crypto/crypto-lib.com patch
crypto/external/bsd/openssl/dist/crypto/ebcdic.h patch
crypto/external/bsd/openssl/dist/crypto/install-crypto.com patch
crypto/external/bsd/openssl/dist/crypto/opensslconf.h patch
crypto/external/bsd/openssl/dist/crypto/opensslv.h patch
crypto/external/bsd/openssl/dist/crypto/ossl_typ.h patch
crypto/external/bsd/openssl/dist/crypto/aes/asm/aesni-x86_64.pl patch
crypto/external/bsd/openssl/dist/crypto/asn1/a_strex.c patch
crypto/external/bsd/openssl/dist/crypto/bn/bn_exp.c patch
crypto/external/bsd/openssl/dist/crypto/bn/bn_nist.c patch
crypto/external/bsd/openssl/dist/crypto/bn/exptest.c patch
crypto/external/bsd/openssl/dist/crypto/bn/asm/x86_64-gcc.c patch
crypto/external/bsd/openssl/dist/crypto/dsa/dsa_ameth.c patch